--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "Awangarda",
+      "Secret": "4zB6F5v8Ql3Xz+NQ8opXxw==",
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
     }
