--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -11,9 +11,9 @@
   },
   "ApiSettings": {
     "JwtOptions": {
-      "Secret": "4zB6F5v8Ql3Xz+NQ8opXxw==",
-      "Issuer": "mango-auth-api",
-      "Audience": "mango-client"
+      "Secret": "",
+      "Issuer": "",
+      "Audience": ""
     }
   }
 }
