--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=OWCA\\OWCA;Database=Mango_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+      "Secret": "",
+      "Issuer": "",
+      "Audience": ""
   }
 }
