--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=OWCA\\OWCA;Database=Mango_ShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "",
+    "Issuer": "",
+    "Audience": ""
+  }
 }
