--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Mango.MessageBus/MessageBus.cs
+/Mango.MessageBus/MessageBus.cs
