--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -17,5 +17,8 @@
   "ServiceUrls": {
     "ProductAPI": "",
     "CouponAPI": ""
+  },
+  "TopicAndQueueNames": {
+    "EmailShoppingCart": "emailshoppingcart"
   }
 }
