--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -19,6 +19,6 @@
     "CouponAPI": ""
   },
   "TopicAndQueueNames": {
-    "EmailShoppingCart": "emailshoppingcart"
+    "EmailShoppingCartQueue": "emailshoppingcart"
   }
 }
