--- a/Mango.Services.EmailAPI/appsettings.json
+++ b/Mango.Services.EmailAPI/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=OWCA\\OWCA;Database=Mango_Email;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ServiceBusConnectionString": "",
+  "TopicAndQueueNames": {
+    "EmailShoppingCartQueue": ""
   }
 }
