--- a/Mango.Services.EmailAPI/Mango.Services.EmailAPI.csproj
+++ b/Mango.Services.EmailAPI/Mango.Services.EmailAPI.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	  <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
