--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -15,5 +15,8 @@
       "Issuer": "",
       "Audience": ""
     }
+  },
+  "TopicAndQueueNames": {
+    "RegisterUserQueue": "registeruser"
   }
 }
