--- a/Mango.Services.EmailAPI/appsettings.json
+++ b/Mango.Services.EmailAPI/appsettings.json
@@ -11,6 +11,7 @@
   },
   "ServiceBusConnectionString": "",
   "TopicAndQueueNames": {
-    "EmailShoppingCartQueue": ""
+    "EmailShoppingCartQueue": "",
+    "RegisterUserQueue": ""
   }
 }
