--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=OWCA\\OWCA;Database=Mango_Order;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "",
+    "Issuer": "",
+    "Audience": ""
+  },
+  "ServiceUrls": {
+    "ProductAPI": ""
+  },
+  "TopicAndQueueNames": {
+    
+  }
 }
